[package]
name = "formality-document"
version = "0.1.0"
authors = ["maiavictor <srvictormaia@gmail.com>"]

[dependencies]
formality = "0.1.10"
serde = "^1.0.80"
serde_derive = "^1.0.80"
serde_json = "^1.0.33"

[lib]
name = "formality_document"
path = "src/lib.rs"

[[bin]]
name = "formality-document"
path = "src/main.rs"
